Project 2: Second collection added, Part 1 completed
